<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/profiletext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:textSize="12dp"
        android:text="@string/yourprofile"/>

    <TextView
        android:id="@+id/nametext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:textSize="12dp"
        android:text="@string/yourname"/>

    <EditText
        android:id="@+id/nameInput"
        android:layout_below="@+id/emailaddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/hintname"/>

    <TextView
        android:id="@+id/name_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:textSize="12dp"
        android:text="@string/youremail"/>
    <EditText
        android:id="@+id/emailInput"
        android:layout_below="@+id/emailaddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/hintemail"/>

    <TextView
        android:id="@+id/namepicture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:textSize="12dp"
        android:text="@string/yourpicture"/>

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@android:drawable/picture_frame"/>

    <TextView
        android:id="@+id/clickpicture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:textSize="12dp"
        android:text="@string/clickabove"/>

    <Button
        android:id="@+id/buttonChat"
        android:layout_column="1"
        android:layout_row="2"
        android:layout_width="203dp"
        android:layout_height="wrap_content"
        android:text="@string/buttonChat"
        />

    <Button
        android:id="@+id/weatherButton"
        android:layout_column="2"
        android:layout_row="2"
        android:layout_width="203dp"
        android:layout_height="wrap_content"
        android:text="@string/weatherButton"
        />

</LinearLayout>