<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<TextView
    android:id="@+id/text1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textSize="30dp"
    android:text="@string/look"/>

    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"    >

    <Button
    android:id="@+id/button"
    android:layout_width="203dp"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:text="@string/ButtonText"/>

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/checkbox" />
    </LinearLayout>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
    android:id="@+id/imageView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    app:srcCompat="@drawable/flag" />

    <androidx.appcompat.widget.SwitchCompat
    android:id="@+id/switchcompat"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/text1" />
</LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint"/>

</LinearLayout>



