<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content">


    <TextView
    android:id="@+id/text1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_columnSpan="2"
    android:textSize="30dp"
    android:text="@string/look"/>

    <Button
        android:id="@+id/button"
        android:layout_below="@id/text1"
        android:layout_width="203dp"
        android:layout_height="wrap_content"
        android:text="@string/ButtonText"
        />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_toRightOf="@id/button"
        android:layout_below="@id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_column="1"
         android:layout_below="@id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:srcCompat="@drawable/flag" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchcompat"
        android:layout_toRightOf="@id/imageView"
        android:layout_below="@id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text1" />

    <EditText
        android:layout_below="@id/imageView"
        android:layout_width="305dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint"/>

</RelativeLayout>