<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_row="4"
    android:layout_column="2"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content">


    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:textSize="30dp"
        android:text="@string/look"/>

    <Button
        android:id="@+id/button"
        android:layout_column="1"
        android:layout_row="2"
        android:layout_width="203dp"
        android:layout_height="wrap_content"
        android:text="@string/ButtonText"
        />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="171dp"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="2"
        android:text="@string/checkbox" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_column="1"
            android:layout_row="3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/flag" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchcompat"
        android:layout_width="167dp"
        android:layout_height="wrap_content"
        android:text="@string/text1" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:layout_column="1"
        android:layout_row="4"
        android:layout_gravity="fill"
        android:hint="@string/hint" />

</GridLayout>