<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/emailaddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:textSize="12dp"
        android:inputType="textEmailAddress"
        android:text="@string/email"/>

    <EditText
        android:id="@+id/emailInput"
        android:layout_below="@+id/emailaddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintemail"/>

    <TextView
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:textSize="12dp"
        android:text="@string/password"/>

    <EditText
        android:id="@+id/passwordInput"
        android:layout_below="@+id/emailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint=""/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"/>
</LinearLayout>