<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ListView
        android:id="@+id/theList"
        android:layout_width="wrap_content"
        android:layout_height="416dp" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/sendButton"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/Send" />

        <EditText
            android:id="@+id/textEntered"
            android:layout_width="213dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint" />

        <Button
            android:id="@+id/receiveButton"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/Receive" />
    </LinearLayout>

</LinearLayout>