<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_row="5"
    android:layout_column="2"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content">

    <ImageView
        android:id="@+id/imageView"
        android:layout_column="1"
        android:layout_row="0"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_weight="1"/>
        //app:srcCompat="@drawable/flag" />

    <TextView
        android:id="@+id/currentTemperature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="1"
        android:layout_columnSpan="2"
        android:textSize="25dp"
        android:text="@string/currentWeather"/>

    <TextView
        android:id="@+id/minTemperature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:layout_column="1"
        android:layout_row="2"
        android:textSize="25dp"
        android:text="@string/minTemperature"/>

    <TextView
        android:id="@+id/maxTemperature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:layout_column="1"
        android:layout_row="3"
        android:textSize="25dp"
        android:text="@string/maxTemperature"/>

    <TextView
        android:id="@+id/uvRating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:layout_column="1"
        android:layout_row="4"
        android:textSize="25dp"
        android:text="@string/uvRating"/>

    <ProgressBar
        android:id="@+id/determinateBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_row="5"
        android:layout_column="1"
        android:progress="25"
        android:visibility="invisible" />


</GridLayout>
